<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WakeMe App</string>
    <string name="title_section1">Alarms</string>
    <string name="title_section2">Friends</string>
    <string name="title_activity_login">Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="sign_up_text">Don\'t have an account? Sign up!</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">SIGN UP</string>
    <string name="signup_error_message">Please make sure you enter a username, password, and email address!</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="login_error_title">Oops!</string>
    <string name="menu_logout_label">Logout</string>
    <string name="empty_inbox_label">No new messages!</string>
    <string name="empty_friends_label">You Don\'t Have Any Friends Yet, \n\n Try to search for some</string>
    <string name="menu_edit_friends_label">Add/Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_title">We\'re sorry!</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage.</string>
    <string name="general_error">Sorry, there was an error!</string>
    <string name="video_size_limit_warning">The selected video must be less than 10 MB.</string>
    <string name="error_selecting_file">There was an error with the file selected. Please select a different file.</string>
    <string name="error_file_too_large">The selected file is too large! Select a new file.</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>

    <string-array name="camera_choices">
        <item>Send Alarm</item>
        <item>Send Message</item>
        <item>Choose alarm</item>
        <item>Send audio</item>
    </string-array>

    <string name="video_file_size_warning">The selected video must be less than 10 MB.</string>
    <string name="error_opening_file">There was a problem with the selected file.</string>
    <string name="error_file_size_too_large">The selected file is too large! Select a new file.</string>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list_message">Choose some friends first!</string>
    <string name="menu_send_label">Send</string>
    <string name="error_selecting_file_title">We\'re sorry!</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">There was an error sending your message. Please try again.</string>
    <string name="title_activity_view_image">selfie</string>
    <string name="content_desc_background">Background Image</string>
    <string name="subtitle">Wake Up your friends, the way you\'d like</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="content_desc_button_divider">Button divider</string>
    <string name="content_desc_message_icon">Message icon</string>
    <string name="content_desc_user_avatar">User avatar</string>
    <string name="content_desc_user_checkmark">User checkmark</string>
    <string name="push_message">You have a new message from %s!</string>
    <string name="search_friend_hint">Search a Friend !</string>
    <string name="search_button">Search !</string>
    <string name="user_ptofile_avatar">User Avatar</string>
    <string name="save_changes_profile">Save Changes !</string>
    <string name="your_full_name">Your Full Name !</string>
    <string name="your_home_town">Your Home Town</string>
    <string name="image_view">Image View</string>
    <string name="no_internet_connection">Sorry, Couldn\'t find any internet connection, Please make sure you have and internet connection.</string>
    <string name="friend_profile">Friend Profile</string>
    <string name="empty_search">Please Enter the Username you want to search for</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="empty_email_rest">Please Enter Your Email Address, You Used When You Signed Up !</string>
    <string name="success_rest_message">Check Your Email For Password ReSetting Instruction</string>
    <string name="email_sent">Email Sent!</string>
    <string name="empty_username">Please Chose a Username !</string>
    <string name="empty_full_name">Please Enter Your Full Name !</string>
    <string name="empty_password">Please Enter a Password</string>
    <string name="empty_email_address">Please Enter a Valid Email Address</string>
    <string name="empty_gender">Please Chose Your Gender !</string>
    <string name="menu_profile_label">Your Profile</string>
    <string name="profile_update_success">Profile Informations Updates Successfully !</string>
    <string name="success_update">Success Update !</string>
    <string name="Image_upload_success">Your Image Changed Successfully !</string>
    <string name="forget_passsword_label">Forget Your Password ?</string>
    <string name="update_profile">Update Profile !</string>
    <string name="rest_password">Rest Password !</string>
    <string name="back_to_login">Back to Login !</string>

    <color name="white">#FFFFFF</color>

    <string name="title_activity_recordaudio">Recordaudio</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_audio">Audio</string>

</resources>
