<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AuthBackground"
      android:background="@color/background_purple"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity" >

    
 <ImageView
         android:id="@+id/imageView1"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:contentDescription="Logo"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="20dp"
         android:src="@drawable/ic_launcher" />
    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle"
        android:paddingTop="80dp"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/subtitle"
        style="@style/AuthTitle.AuthSubTitle" />

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer" >

        <EditText
            android:id="@+id/usernameField"
			style="@style/AuthEditText"
            android:hint="@string/username_hint" >

            <requestFocus />
        </EditText>
        
        <EditText
            android:id="@+id/fullnameField"
			style="@style/AuthEditText"
            android:hint="@string/your_full_name" >

        </EditText>

        <EditText
            android:id="@+id/passwordField"
			style="@style/AuthEditText"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/emailField"
			style="@style/AuthEditText"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />
        
        <EditText
            android:id="@+id/hometownField"
			style="@style/AuthEditText"
            android:hint="@string/your_home_town" />
        
        <RadioGroup android:id="@+id/sex"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    <RadioButton android:id="@+id/radio_male"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/male"
		        android:onClick="onRadioButtonClicked"/>
		    <RadioButton android:id="@+id/radio_female"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/female"
		        android:onClick="onRadioButtonClicked"/>
		</RadioGroup>
    </LinearLayout>
    
    <ImageView 
        android:id="@+id/buttonDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextLayout"
        android:layout_centerHorizontal="true"
        android:src="@drawable/button_divider"
        android:contentDescription="@string/content_desc_button_divider"/>

    <Button
        android:id="@+id/signupButton"
		style="@style/AuthButton"
        android:text="@string/sign_up_button_label"
        android:layout_alignParentLeft="true"
         android:textColor="@color/white_color"
        android:layout_below="@+id/editTextLayout"
        android:layout_toLeftOf="@id/buttonDivider"
        android:layout_marginRight="0dp" />
    
    <Button
        android:id="@+id/cancelButton"
		style="@style/AuthButton"
		 android:textColor="@color/white_color"
        android:text="@string/cancel_button_label"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editTextLayout"
        android:layout_toRightOf="@id/buttonDivider"
        android:layout_marginLeft="0dp" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_unit_ids"/>

</RelativeLayout>







