<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	xmlns:ads="http://schemas.android.com/apk/res-auto"
    style="@style/AuthBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/subtitle"
        style="@style/AuthTitle.AuthSubTitle" />

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer" >

        <EditText
            android:id="@+id/usernameField"
            style="@style/AuthEditText"
            android:hint="@string/username_hint" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/passwordField"
            style="@style/AuthEditText"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/loginButton"
        style="@style/AuthButton"
        android:text="@string/login_button_label"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextLayout" />
    
    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/sign_up_text"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/ForgetText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/forget_passsword_label"
        android:textColor="@android:color/white" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_unit_ids"/>
   
</RelativeLayout>