<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity$DummySectionFragment" >
    <GridView
        android:id="@+id/friendsGrid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/searchButton"
        android:layout_centerHorizontal="true"
        android:clipToPadding="false"
        android:columnWidth="90dp"
        android:gravity="center"
        android:horizontalSpacing="@dimen/user_grid_spacing"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:verticalSpacing="@dimen/user_grid_spacing" >

    </GridView>

    <Button
        android:id="@+id/searchButton"
        style="@style/AuthButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/searchFriend"
        android:layout_alignBottom="@+id/searchFriend"
        android:layout_alignParentRight="true"
        android:text="@string/search_button" />

    <EditText
        android:id="@+id/searchFriend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/searchButton"
        android:ems="10"
        android:hint="@string/search_friend_hint" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@android:id/empty"
        style="@style/AuthTitle.AuthSubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/searchButton"
        android:text="@string/empty_friends_label" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_unit_ids"/>
    
    
</RelativeLayout>