<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    style="@style/AuthBackground"
       android:background="@color/background_purple"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPasswordActivity" >
  

     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:contentDescription="Logo"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="40dp"
         android:src="@drawable/ic_launcher" />
    

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle"
        android:paddingTop="100dp"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/subtitle"
        style="@style/AuthTitle.AuthSubTitle" />

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer" >

        <EditText
            android:id="@+id/emailField"
            style="@style/AuthEditText"
            android:hint="@string/username_hint" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/resetPassword"
        style="@style/AuthButton"
        android:text="@string/rest_password"
        android:textColor="@color/white_color"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextLayout" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resetPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/back_to_login"
        android:textColor="@android:color/white" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_unit_ids"/>
    
</RelativeLayout>